# ArtemisLeapFrog

./: .gitignore  LEAPFROG-SERC-Fall2020.pod  LEAPFROG-SERC-Fall2020_Rev0_1.pod  LEAPFROG-Software plan_Rev0_1.pod  LICENSE  README.md  gps.py  imu.py
Diagrams/: CircuitDiagrams.drawio  ProjectEnvironment.drawio  SoftwareArchitecture.drawio  SystemArchitecture.drawio
Documentation/: Leapfrog_Architecture.drawio  Leapfrog_Documentation.odt  Leapfrog_SoftwareArchitecture.drawio
POC/: ROS2.md
POC/Arduino/hardware_virtualize/: hardware_virtualize.ino
POC/Arduino/linear_actuator_test/: LinearActuator.cpp  LinearActuator.h  linear_actuator_test.ino
POC/Arduino/mpu6050_test/MPU6050_DMP6_using_DMP_V6.12/: MPU6050_DMP6_using_DMP_V6.12.ino
POC/RaspberryPi/: KalmanFilter.py  MPU6050.cpp  MPU6050.h  ReadMe.md  i2c_mpu6050.cpp
POC/RaspberryPi/KalmanFilter/: DMP_MPU6050.py  Kalman.py
POC/RaspberryPi/cpp/: MPU6050_temp.cpp  Makefile
POC/RaspberryPi/cpp/Relay/: test_gpio.cpp
POC/RaspberryPi/cpp/SEN0259/: SEN0259.cpp
POC/RaspberryPi/cpp/Serial/: Makefile
POC/RaspberryPi/python/: gy521.py  jetcatP300.py  mpu6050.py  python_dump_jetcat.dump  relay.py  sen0259.py  serial_logger.py
POC/RaspberryPi/python/KalmanFilter/: MPU6050.py  kalman_plot.py
POC/RaspberryPi/visualize/: raw_imu_plot.py
POC/Software/Boost/: boost_fmt_stream.cpp  boost_trivial_flt.cpp  logger.cpp  logging.cpp
POC/Software/C++/: a.out  parser  parser.cpp  pointers_play1.cpp  reference.json  stream_overloading.cpp  system_exec.cpp
POC/Software/Serial/: serial
POC/Software/Serial/src/: GroundStation.cpp  Serial.cpp
POC/camden-code/: controls.cpp  controls.h  leapfrog_controls.cpp
POC/gazebo_ros_ws/: README.md  path_setup.sh
POC/gazebo_ros_ws/src/gazebo_dev/: package.xml
POC/gazebo_ros_ws/src/gazebo_msgs/: package.xml
POC/gazebo_ros_ws/src/gazebo_plugins/: CMakeLists.txt
POC/gazebo_ros_ws/src/gazebo_plugins/include/gazebo_plugins/: gazebo_ros_actuator_move.hpp  gazebo_ros_model_lift.hpp
POC/gazebo_ros_ws/src/gazebo_plugins/include/utilities/: PIDController.hpp
POC/gazebo_ros_ws/src/gazebo_plugins/src/: gazebo_ros_actuator_move.cpp  gazebo_ros_linear_actuator.cpp  gazebo_ros_model_lift.cpp
POC/gazebo_ros_ws/src/gazebo_plugins/src/utilities/: PIDController.cpp
POC/gazebo_ros_ws/src/gazebo_plugins/worlds/: gazebo_ros_actuator_move.world  gazebo_ros_linear_actuator.world  gazebo_ros_model_lift.world
POC/gazebo_ros_ws/src/gazebo_ros/: CMakeLists.txt
POC/gazebo_ws/: README.md
POC/gazebo_ws/crater_landing/: UpdateBlueZoneScore.cpp  UpdateGreenZoneScore.cpp  UpdateRedZoneScore.cpp
POC/gazebo_ws/src/crater_landing/: CMakeLists.txt  crater_landing.world
POC/gazebo_ws/src/crater_landing/models/landing_zone/: model.config  model.sdf
Pseudo GPS/: README.md
Pseudo GPS/src/: IMU.h  PseudoGPS.cpp  PseudoGPS.h
Range Sensor Library/: README.md  compile.sh
Range Sensor Library/include/: RangeSensor.h
Range Sensor Library/include/SEN0259/: SEN0259.cpp  SEN0259.h
Range Sensor Library/include/serialib/: README.md
Range Sensor Library/src/: SEN0259.cpp  main.cpp
References/: CheatSheet_ROS.md  Electronic Items List.ods  LEAPFROG_Software_Documentation.odt
Simulation/: README.md
Simulation/raw/: gimbal_ring_1.odg  gimbal_ring_1.tif  gimbal_ring_2.odg  leapfrog_base_1.odg
Simulation/src/gazebo_msgs/: CMakeLists.txt
Simulation/src/gazebo_ros/: package.xml
Simulation/src/gazebo_ros_pkgs/: package.xml
analysis/: ReadMe.md  log_parser.py  runlog_0.xlsx  runlog_1.xlsx  runlog_2.xlsx  runlog_3.xlsx
dev/: ReadMe.md  Setup.md
dev/common/: Makefile
dev/common/src/: BaseProperties.cpp  CommandController.cpp  Communication.cpp  Serial.cpp  Test.cpp
dev/competition/: Makefile
dev/competition/include/: MyGPS.hpp
dev/competition/template/: Makefile  PseudoGPS.cpp
dev/controller/src/: PIDController.cpp
dev/ground/: Makefile  Makefile_old
dev/ground/include/: GroundStation.hpp  Serial.hpp
dev/ground/src/: CommandController.cpp  EngineController.cpp  GimbalController.cpp  GroundStation.cpp  Main.cpp  Serial.cpp  ThrusterController.cpp  main.cpp
dev/hardware/: JetCatP300.cpp  JetCatP300.hpp  Main.cpp  Main2.cpp  Makefile  a.out
dev/hardware/include/: BatteryMeter.hpp  ColdGasThrusters.hpp  JetCatP300.h  JetCatP300.hpp  Kalman.hpp  LinearActuator.hpp  MPU6050.h  RangeSensor.h  SEN0259.h  Serialib.h  Spawn.h
dev/hardware/src/: BatteryMeter.cpp  ColdGasThrusters.cpp  CommandController.cpp  JetCatP300.cpp  Kalman.cpp  LinearActuator.cpp  MPU6050.cpp  Main.cpp  PseudoGPS.cpp  RangeSensor.cpp  Relay.cpp  SEN0259.cpp  Serial.cpp  Serialib.cpp  Servo.cpp  Spawn.cpp  TestActuators.cpp  TestCompetition.cpp
dev/src/: Makefile  README.md
dev/src/actuators/: CMakeLists.txt  package.xml
dev/src/actuators/include/actuators/: JetCatP300.hpp  Serial.hpp
dev/src/actuators/msg/: ActuatorJCP300Info.msg  AcutatorJetCatP300.msg
dev/src/actuators/src/: JetCatP300.cpp  Serial.cpp  acs.cpp  engine.cpp
dev/src/actuators/srv/: ActuatorColdGasFireThruster.srv  ActuatorJCP300Status.srv
dev/src/communication/: CMakeLists.txt  package.xml
dev/src/communication/src/: Serial.cpp  rfd900x.cpp
dev/src/communication/srv/: CommRFRecv.srv  CommRFSend.srv
dev/src/flightcontrol/: CMakeLists.txt
dev/src/safety/: CMakeLists.txt  package.xml
dev/src/sensors/: CMakeLists.txt  package.xml
dev/vehicle/: Makefile  copylogs.sh  flush_serial.py  run_leapos.sh  vehicle.service
dev/vehicle/linear_act_controller/: linear_act_controller.ino
dev/vehicle/scripts/: Makefile  generator.py
dev/vehicle/src/: Makefile
dev/vehicle/src/sensors/: CMakeLists.txt  Makefile
dev/vehicle/src/sensors/include/sensors/: ADS1015.hpp  MPU6050.hpp
dev/vehicle/src/sensors/launch/: sensors.launch.py
dev/vehicle/src/sensors/msg/: SensorImu.msg  SensorLinearActuator.msg
dev/vehicle/src/sensors/src/: ADS1015.cpp  MPU6050.cpp  imu.cpp  laser.cpp  linearactuator.cpp  linearactuator2.cpp
dev/virtualization/: IMU.py  JetCatP300.py  Laser.py
test/StaticHotFire/GroundStation/: Makefile  test1.script
(+155 files in other folders)
